First scaffold of POST /tasks operation
